[package]
name = "veles"
description = "A library for the development of large scale interactive applications."
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/dristic/veles"
readme = "README.md"
exclude = ["examples/*", ".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.4", features = ["derive"] }
crc32fast = "1.3.2"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
