[package]
name = "veles"
description = "A library for the development of large scale interactive applications."
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/dristic/veles"
readme = "README.md"
exclude = ["examples/*", ".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.4", features = ["derive"] }
crc32fast = "1.3.2"
flate2 = "1.0.26"
hex = "0.4.3"
ring = "0.16.20"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
fastcdc = "3.0.3"
log = "0.4.19"
simple_logger = "4.2.0"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
